--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>AmuedFrontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png"  href="/assets/background/logo_aemud_Plan_de_travail_1.png">
   <script src=""></script>
 
 </head>
